overlay/devel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-examples-stage-openshift-pub
  labels:
    app.kubernetes.io/part-of: openshift-examples-simple
    helm.sh/chart: openshift-examples-simple-0.1.0
    app.kubernetes.io/name: examples-stage-openshift-pub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: examples-stage-openshift-pub
    app.kubernetes.io/instance: release-name
