overlay/devel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-examples-stage-openshift-pub
  labels:
    app.kubernetes.io/part-of: openshift-examples-simple
    helm.sh/chart: openshift-examples-simple-0.1.0
    app.kubernetes.io/name: examples-stage-openshift-pub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    route.openshift.io/termination: edge
spec:
  tls:
    - hosts:
        - "examples-stage.openshift.pub"
      secretName: examples-stage-openshift-pub
  rules:
    - host: "examples-stage.openshift.pub"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-examples-stage-openshift-pub
                port:
                  number: 8080
